--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   "prettier.bracketSameLine": true,
   "prettier.jsxSingleQuote": true,
   "prettier.quoteProps": "consistent",
-  "prettier.trailingComma": "all",
+  "prettier.trailingComma": "es5",
   "editor.defaultFoldingRangeProvider": "esbenp.prettier-vscode",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "notebook.defaultFormatter": "esbenp.prettier-vscode"
