--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
 # SPDX-License-Identifier: CC-BY-4.0 OR GPL-3.0-or-later
 # This file is part of Network Engineering Pro
-
+#
 # Created by https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,dreamweaver
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,visualstudiocode,dreamweaver
 
 
 ### Custom Ignores ###
+python-venv/
+.webpack_cache/
+.github/workflows/disabled/
+img/.favicon-old
+.orig/
+server.mjs
+crypto.mjs
+tests.mjs
 
 
 ### Node ###
