--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: CC-BY-4.0 OR GPL-3.0-or-later
-# This file is part of Network Engineering Pro
-
+# This file is part of Network Engineering Pro.
+#
 # EditorConfig helps developers define and maintain consistent
 # coding styles between different editors and IDEs
 # See http://editorconfig.org/ for full details
