--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
-# SPDX-License-Identifier: (CC-BY-4.0 OR GPL-3.0-or-later)
-# This file is part of Network Engineering Pr
-
+# SPDX-License-Identifier: CC-BY-4.0 OR GPL-3.0-or-later
+# This file is part of Network Engineering Pro
+#
 ## GITATTRIBUTES FOR WEB PROJECTS
 #
 # These settings are for any web project.
