--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "org-profile-pub",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "The public organization profile for Network Engineering Pro on GitHub",
   "keywords": [
     "neteng-pro",
@@ -39,13 +39,10 @@
     "browserslist": "^4.24.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.6.0",
-    "globals": "^15.14.0",
+    "globals": "^15.15.0",
     "prettier": "3.4.2"
   },
   "browserslist": [
