--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neteng-pro/org-profile-pub",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "The public organization profile for Network Pro Strategies on GitHub",
   "keywords": [
     "networking",
@@ -25,15 +25,27 @@
     "url": "https://bio.neteng.pro"
   },
   "type": "module",
-  "main": "index.html",
+  "main": "README.md",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "lint": "npx eslint && prettier --check .",
+    "mdlint": "npx markdownlint-cli2 '**/*.md' '!node_modules/**' '!dist/**'",
+    "fix": "npx eslint --fix && prettier --write .",
+    "clean": "rm -rf dist/* && npm update",
+    "ci": "rm -rf dist/* node_modules package-lock.json && npm install"
   },
   "dependencies": {
     "browserslist": "^4.24.4"
   },
   "devDependencies": {
-    "markdownlint": "^0.37.4",
+    "@eslint/js": "^9.21.0",
+    "chai": "^5.2.0",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-mocha": "^10.5.0",
+    "globals": "^16.0.0",
+    "markdownlint-cli2": "^0.17.2",
+    "mocha": "^11.1.0",
     "prettier": "3.4.2"
   },
   "lockFileVersion": 3
