Updated links to new repo name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@neteng-pro/org-profile-pub",
-  "version": "0.0.4",
+  "name": "@netwk-pro/org-profile-pub",
+  "version": "0.0.5",
   "description": "The public organization profile for Network Pro Strategies on GitHub",
   "keywords": [
     "networking",
@@ -12,11 +12,11 @@
   ],
   "homepage": "https://netwk.pro",
   "bugs": {
-    "url": "https://github.com/NetEng-Pro/neteng-pro.github.io/issues"
+    "url": "https://github.com/netwk-pro/netwk-pro.github.io/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NetEng-Pro/.github.git"
+    "url": "git+https://github.com/netwk-pro/.github.git"
   },
   "license": "CC-BY-4.0 OR GPL-3.0-or-later",
   "author": {
