--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netwk-pro/org-profile-pub",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "The public organization profile for Network Pro Strategies on GitHub",
   "keywords": [
     "networking",
@@ -27,10 +27,12 @@
   "type": "module",
   "main": "README.md",
   "scripts": {
-    "test": "mocha",
-    "lint": "npx eslint && prettier --check .",
-    "mdlint": "npx markdownlint-cli2 '**/*.md' '!node_modules/**' '!dist/**'",
-    "fix": "npx eslint --fix && prettier --write .",
+    "test": "mocha test/**/*.mjs",
+    "lint": "eslint .",
+    "format": "prettier --check .",
+    "lint:format": "eslint . && prettier --check .",
+    "mdlint": "npx markdownlint-cli2 '**/*.{md,markdown}' '!node_modules/**' '!dist/**' '!coverage/**'",
+    "fix": "eslint --fix . && prettier --write .",
     "clean": "rm -rf dist/* && npm update",
     "ci": "rm -rf dist/* node_modules package-lock.json && npm install"
   },
@@ -44,6 +46,7 @@
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-mocha": "^10.5.0",
     "globals": "^16.0.0",
+    "markdownlint": "^0.37.4",
     "markdownlint-cli2": "^0.17.2",
     "mocha": "^11.1.0",
     "prettier": "3.4.2"
