--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,5 @@
+# .prettierignore
+#
 # SPDX-License-Identifier: CC-BY-4.0 OR GPL-3.0-or-later
 # This file is part of Network Pro
 #
@@ -5,10 +7,18 @@
 
 .*
 **/*.xml
-**/.vscode
 **/.git
 **/.svn
 **/.hg
+**/.cache
+**/.webpack_cache
+**/.vscode
+**/assets/license
+**/build
+**/coverage
 **/dist
 **/node_modules
+postcss.config.mjs
 eslint.config.mjs
+babel.config.json
+stylelint.config.js
