--- a/.prettierignore
+++ b/.prettierignore
@@ -10,15 +10,5 @@
 **/.git
 **/.svn
 **/.hg
-**/.cache
-**/.webpack_cache
 **/.vscode
-**/assets/license
-**/build
-**/coverage
-**/dist
-**/node_modules
-postcss.config.mjs
-eslint.config.mjs
-babel.config.json
-stylelint.config.js
+node_modules
