--- a/.prettierrc
+++ b/.prettierrc
@@ -1,19 +1,21 @@
 {
-  "htmlWhitespaceSensitivity": "strict",
-  "quoteProps": "consistent",
-  "trailingComma": "es5",
-  "bracketSameLine": true,
-  "bracketSpacing": true,
-  "proseWrap": "preserve",
-  "endOfLine": "lf",
   "printWidth": 80,
-  "arrowParens": "always",
-  "semi": true,
   "tabWidth": 2,
-  "jsxSingleQuote": true,
+  "useTabs": false,
+  "semi": true,
   "singleQuote": false,
-  "singleAttributePerLine": false,
+  "quoteProps": "as-needed",
+  "jsxSingleQuote": false,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "objectWrap": "preserve",
+  "bracketSameLine": true,
+  "arrowParens": "always",
   "requirePragma": false,
   "insertPragma": false,
-  "useTabs": false
+  "proseWrap": "preserve",
+  "htmlWhitespaceSensitivity": "strict",
+  "endOfLine": "lf",
+  "embeddedLanguageFormatting": "auto",
+  "singleAttributePerLine": false
 }
