--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netwk-pro/org-profile-pub",
-  "version": "0.0.11",
+  "version": "1.0.0",
   "description": "The GitHub public organization profile for Network Pro Strategies",
   "keywords": [
     "networking",
@@ -26,7 +26,6 @@
     "url": "https://bio.neteng.pro"
   },
   "type": "module",
-  "main": "README.md",
   "directories": {
     "test": "test"
   },
@@ -35,24 +34,26 @@
     "test:coverage": "c8 mocha test/**/*.mjs",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "lint": "eslint --ext .mjs,.js --config eslint.config.mjs --ignore-pattern node_modules/ .",
-    "lint:fix": "eslint --ext .mjs,.js --config eslint.config.mjs --ignore-pattern node_modules/  --fix .",
+    "lint": "eslint . --ext .mjs,.js --ignore-pattern node_modules/",
+    "lint:fix": "eslint . --ext .mjs,.js --ignore-pattern node_modules/ --fix",
     "lint:md": "npx markdownlint-cli2 \"**/*.{md,markdown}\" \"#node_modules/**\"",
     "lint:all": "npm run lint && npm run lint:md && npm run format",
     "checkout": "npm run test && npm run lint:all",
-    "clean": "rm -rf node_modules package-lock.json && npm install"
+    "delete": "rm -rf node_modules package-lock.json",
+    "clean": "npm run delete && npm cache clean --force && npm install",
+    "upgrade": "npx npm-check-updates -u"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "browserslist": "^4.24.5",
+    "@eslint/js": "^9.28.0",
+    "browserslist": "^4.25.0",
     "chai": "^5.2.0",
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.2",
-    "eslint-plugin-mocha": "^10.5.0",
-    "globals": "^16.0.0",
-    "markdownlint": "^0.37.4",
-    "markdownlint-cli2": "^0.17.2",
-    "mocha": "^11.1.0",
-    "prettier": "3.4.2"
+    "eslint": "^9.28.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-mocha": "^11.1.0",
+    "globals": "^16.2.0",
+    "markdownlint": "^0.38.0",
+    "markdownlint-cli2": "^0.18.1",
+    "mocha": "^11.5.0",
+    "prettier": "3.5.3"
   }
 }
