Completely revised README.md, modified LICENSE.md, added PGP-KEY.asc and default community health files

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,14 +1,17 @@
 # .prettierignore
 #
+# Copyright © 2025 Network Pro Strategies (Network Pro)
 # SPDX-License-Identifier: CC-BY-4.0 OR GPL-3.0-or-later
 # This file is part of Network Pro
 #
 # Ignore artifacts
 
 .*
+*.asc
 **/*.xml
 **/.git
 **/.svn
 **/.hg
 .vscode/
 node_modules/
+
