--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
   "semi": true,
   "singleQuote": false,
   "quoteProps": "as-needed",
-  "jsxSingleQuote": false,
+  "jsxSingleQuote": true,
   "trailingComma": "all",
   "bracketSpacing": true,
   "objectWrap": "preserve",
