--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-  "notebook.defaultFormatter": "esbenp.prettier-vscode",
   // Editor settings
   "editor.defaultFoldingRangeProvider": "esbenp.prettier-vscode",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
@@ -13,7 +12,6 @@
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "prettier.htmlWhitespaceSensitivity": "strict",
   // ESLint configuration
   "eslint.validate": [
     "javascript",
@@ -50,11 +48,27 @@
     "#legal",
     "#stack",
     "#foss",
-    "#blog"
-  ],
-  "cSpell.words": [
-    "foss",
-    "neteng",
-    "netwk"
+    "#blog",
+    "#bug-reports",
+    "#feature-requests",
+    "#pull-requests",
+    "#pledge",
+    "#standards",
+    "#response",
+    "#enforce",
+    "#attribute",
+    "#ownership",
+    "#trademark",
+    "#branding",
+    "#licensed-material",
+    "#licenses",
+    "#dlnotes",
+    "#third-party",
+    "#prohibited-uses",
+    "#disclaimer",
+    "#version",
+    "#revisions",
+    "#contact",
+    "#docs"
   ]
 }
