--- a/.github/workflows/test-token.yml
+++ b/.github/workflows/test-token.yml
@@ -21,14 +21,14 @@ jobs:
           echo "Actor: ${{ github.actor }}"
           echo "Repository: ${{ github.repository }}"
 
-      - name: Create a test issue (dry run)
-        run: |
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.NWPRO_ACTION }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/issues \
-            -d '{"title":"✅ Token Test Passed","body":"This issue was created by a workflow to confirm token access.","labels":["test"]}'
-        env:
-          GITHUB_TOKEN: ${{ secrets.NWPRO_ACTION }}
+      #- name: Create a test issue (dry run)
+      #  run: |
+      #    curl -X POST \
+      #      -H "Authorization: token ${{ secrets.NWPRO_ACTION }}" \
+      #      -H "Accept: application/vnd.github.v3+json" \
+      #      https://api.github.com/repos/${{ github.repository }}/issues \
+      #      -d '{"title":"✅ Token Test Passed","body":"This issue was created #by a workflow to confirm token access.","labels":["test"]}'
+      #  env:
+      #    GITHUB_TOKEN: ${{ secrets.NWPRO_ACTION }}
 
 # cspell:ignore nwpro
