--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
     "tag:yaml.org,2002:python/name:pymdownx.superfences.fence_code_format",
     "tag:yaml.org,2002:python/object/apply:pymdownx.slugs.slugify mapping"
   ],
+  "markdown.validate.enabled": false,
   "markdown.validate.ignoredLinks": [
     "#top",
     "#netwk-pro",
