--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netwk-pro/org-profile-pub",
-  "version": "1.1.14",
+  "version": "1.1.15",
   "description": "The GitHub public organization profile for Network Pro Strategies",
   "keywords": [
     "advisory",
@@ -23,7 +23,7 @@
   "author": {
     "name": "Scott Lopez",
     "email": "github@sl.neteng.cc",
-    "url": "https://bio.neteng.pro"
+    "url": "https://bio.netwk.pro"
   },
   "type": "module",
   "scripts": {
