--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netwk-pro/org-profile-pub",
-  "version": "1.1.15",
+  "version": "1.1.16",
   "description": "The GitHub public organization profile for Network Pro Strategies",
   "keywords": [
     "advisory",
@@ -30,16 +30,18 @@
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "lint:md": "npx markdownlint-cli2 \"**/*.{md,markdown}\" \"#node_modules/**\"",
-    "lint:all": "npm run lint:md && npm run format",
+    "lint:all": "npm-run-all lint:md --sequential format",
     "checkout": "npm run lint:all",
     "delete": "rm -rf node_modules package-lock.json",
     "clean": "npm run delete && npm cache clean --force && npm install",
-    "upgrade": "npx npm-check-updates -u"
+    "upgrade": "ncu -u --format group --color",
+    "check:updates": "ncu --format group --color"
   },
   "devDependencies": {
     "browserslist": "^4.27.0",
     "markdownlint": "^0.39.0",
     "markdownlint-cli2": "^0.18.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "3.6.2"
   }
 }
