chore: release prep for v1.1.19

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,43 +34,5 @@
     "tag:yaml.org,2002:python/object/apply:pymdownx.slugs.slugify mapping"
   ],
   "markdown.validate.enabled": false,
-  "markdown.validate.ignoredLinks": [
-    "#top",
-    "#netwk-pro",
-    "#questions",
-    "#cc-by",
-    "#gnu-gpl",
-    "#repo",
-    "#links",
-    "#discord",
-    "#website",
-    "#discuss",
-    "#posts",
-    "#legal",
-    "#stack",
-    "#foss",
-    "#blog",
-    "#bug-reports",
-    "#feature-requests",
-    "#pull-requests",
-    "#pledge",
-    "#standards",
-    "#response",
-    "#enforce",
-    "#attribute",
-    "#ownership",
-    "#trademark",
-    "#branding",
-    "#licensed-material",
-    "#licenses",
-    "#dlnotes",
-    "#third-party",
-    "#prohibited-uses",
-    "#disclaimer",
-    "#version",
-    "#revisions",
-    "#contact",
-    "#docs",
-    "#support"
-  ]
+  "markdown.validate.ignoredLinks": []
 }
