--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netwk-pro/org-profile-pub",
-  "version": "1.1.18",
+  "version": "1.1.19",
   "description": "The GitHub public organization profile for Network Pro Strategies",
   "keywords": [
     "advisory",
@@ -38,9 +38,9 @@
     "check:updates": "ncu --format group --color"
   },
   "devDependencies": {
-    "browserslist": "^4.27.0",
+    "browserslist": "^4.28.0",
     "markdownlint": "^0.39.0",
-    "markdownlint-cli2": "^0.18.1",
+    "markdownlint-cli2": "0.18.1",
     "npm-run-all": "^4.1.5",
     "prettier": "3.6.2"
   }
